add landing page

--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,61 @@
   src: url('./assets/fonts/Roboto-Regular.ttf') format('truetype');
 }
 
-/* body {
-  font-family: 'san';
-} */
+body{
+  font-family: 'Poppins', sans-serif;
+}
 
 .bg-color-main {
-  background-color: #cac9f3;
+  background-color: #F86061;
+}
+.bg-color-secondary{
+  background-color: #FEF5F5;
 }
 
 .color-main {
-  color: #cac9f3;
+  color: #F86061;
+}
+.big-text-color{
+  color: #2E2E2E;
+}
+.small-text-color{
+  color: #676767;
+}
+.text-size-74 {
+  font-size: 74px;
+}
+.text-size-18 {
+  font-size: 18px;
+}
+.text-size-14 {
+  font-size: 14px;
+}
+.text-size-22 {
+  font-size: 22px;
+}
+.text-size-32 {
+  font-size: 32px;
+}
+.text-size-40 {
+  font-size: 40px;
+}
+.line-height-88{
+  line-height: 88px;
+}
+.line-height-44{
+  line-height: 44px;
+}
+.text-weight-regular {
+  font-weight: 400;
+}
+.text-weight-medium{
+  font-weight: 500;
+}
+.text-weight-bold{
+  font-weight: 700;
+}
+.hover:hover{
+  transition: 1s;
+  transform: scale(1.1);
+  box-shadow: 0px 0px 5px  rgb(119, 119, 119);
 }
